@@ -1,0 +1,53 @@
+<div id="doc-generation-view"
+     tal:condition="view/available"
+     i18n:domain="collective.documentgenerator">
+    <form name="podTemplateForm"
+	  method="POST"
+	  target="_blank"
+	  tal:attributes="action string:${context/absolute_url}/document-generation;">
+	<input type="hidden" name="template_uid"/>
+	<input type="hidden" name="output_format"/>
+	<input type="hidden" name="uids" value=""/>
+	<input type="hidden" name="facetedQuery" value=""/>
+	<input type="hidden" name="mailinglist_name" value=""/>
+
+	<ul class="pod-template">
+	    <li tal:repeat="infos view/get_links_info">
+		<a href="#"
+		   tal:attributes="onclick string:event.preventDefault();;javascript:generatePodDocument('${infos/template_uid}','${infos/output_format}', this)"
+		   style="cursor: pointer">
+		    <img src="#"
+			 tal:attributes="src string:${view/portal_url}/++resource++collective.documentgenerator/${infos/output_format}.png" />
+		    <span tal:replace="infos/title">Template title</span>
+		</a>
+
+		<tal:comment replace="nothing">XXX Added by PloneMeting : send the document by email.</tal:comment>
+		<tal:mail define="mailingLists python: view.getAvailableMailingLists(infos['template_uid'])"
+				  condition="mailingLists">
+		<img src="sendMail.gif"
+			 tal:attributes="onClick string:toggleMenu('${infos/template_uid}_${infos/output_format}');
+							 src string:${view/portal_url}/sendMail.gif;"
+			 style="cursor:pointer; position: relative;"/>
+		<div tal:define="menuId string:pm_menu_${infos/template_uid}_${infos/output_format}"
+			 tal:attributes="id menuId; name menuId" class="pmDropdown podTemplateSendmail">
+		  <div tal:repeat="name mailingLists">
+			<a style="cursor: pointer"
+			   tal:content="name"
+		       tal:attributes="onclick string:event.preventDefault();;javascript:$(this).parents('form')[0].mailinglist_name.value='${name}';;javascript:$(this).parents('form')[0].target='_self';;generatePodDocument('${infos/template_uid}','${infos/output_format}', this);;">
+				Mailing list name
+			</a>
+		  </div>
+				<div style="text-align: right;"
+					 tal:attributes="onClick string:toggleMenu('${infos/template_uid}_${infos/output_format}');">
+					<img style="bottom: -13px; position: absolute; right: -13px; cursor: pointer;"
+						 src="pb_close_small.png"
+						 tal:attributes="src string:${view/portal_url}/pb_close_small.png"/>
+				</div>
+		</div>
+		</tal:mail>
+
+	    </li>
+	</ul>
+
+    </form>
+</div>
