@@ -19,7 +19,6 @@
          meta_type="Factory-based Type Information with dynamic views"/>
  <object name="MeetingUser"
          meta_type="Factory-based Type Information with dynamic views"/>
- <!-- ##code-section TYPES -->
  <object name="Plone Site"
          meta_type="Factory-based Type Information with dynamic views"/>
  <object name="meetingadvice" meta_type="Dexterity FTI"/>
@@ -27,5 +26,6 @@
          meta_type="Factory-based Type Information with dynamic views"/>
  <object name="MeetingItemRecurring"
          meta_type="Factory-based Type Information with dynamic views"/>
- <!-- ##/code-section TYPES -->
+ <object name="ConfigurablePODTemplate" meta_type="Dexterity FTI"/>
+ <object name="DashboardPODTemplate" meta_type="Dexterity FTI"/>
 </object>
