@@ -15,7 +15,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Rely on beautifulsoup4, Products.CPUtils
 - Get rid of ArchGenXML, just use it for workflows generation
 - Replaced own PODTemplate by the ConfigurablePODTemplate of collective.documentgenerator, removed appy.pod
-  parameters of portal_plonemeeting and use the collective.documentgenerator control panel
+  parameters from portal_plonemeeting and use the collective.documentgenerator control panel. Added back
+  "mailing lists" functionnality that does not exist in collective.documentgenerator
 - Moved dashboards and meeting view to imio.dashboard (see imio.dashboard package regarding required changes)
 - MeetingFiles title is now indexed in items's SearchableText so it is possible to do a search on an annex
   title directly in the 'Search' field available on every dashboard searches (my items, all items, ...)
